<resources>
    <string name="app_name">WhatsApp</string>
    <string name="botao_cdastrar">Cadastrar</string>
    <string name="texto_validacao">Validação</string>
    <string name="email">Digite seu email</string>
    <string name="senha">Digite sua senha</string>
    <string name="botao_logar">Logar</string>
    <string name="cadastro">Não tem conta? Cadastre-se!</string>
    <string name="nome">Digite seu nome</string>
    <string name="item_sair">Sair</string>
    <string name="item_configuracoes">Configurações</string>
    <string name="logo">Whatsapp Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
